--- a/BloggoFrontend/css/dashboard.css
+++ b/BloggoFrontend/css/dashboard.css
@@ -243,6 +243,17 @@ a { color:inherit; text-decoration:none }
     box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2); /* Soft glow */
 }
 
+.people-to-follow-card ul {
+    padding-left: 0;
+    margin-top: 10px;
+}
+.people-to-follow-card li {
+    list-style: none;
+}
+
+
+
+
 
 /* Full-screen overlay */
 #loading {
